--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About Me</title>
+    <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../static/css/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../static/css/Grid.css" />
@@ -21,9 +21,9 @@
         <img src="../static/img/mikayla.png" alt="logo">
     </div>
     <div class="nav_bar" id="my_nav_bar">
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <div class="fa fa-bars nav-bar-menu-icon"></div>
-                </a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <div class="fa fa-bars nav-bar-menu-icon"></div>
+        </a>
         <a class="nav_bar-link" href="index.html">Home</a>
         <a class="nav_bar-link" href="topics.html">Learning Topics</a>
         <a class="nav_bar-link" href="projects.html">Side Projects</a>
@@ -36,17 +36,11 @@
             <div class="home-about-me">
                 <p>Hi, I'm Mikayla!</p>
                 <div class="paragraph-divider"></div>
-                <p>My education was in biology, but my current interest in data and technology. Follow along with
-                    me as
-                    I expand my skills and tackle new topics. My education was in biology, but my current interest in data and technology. Follow along with
-                    me as
-                    I expand my skills and tackle new topics.My education was in biology, but my current interest in data and technology. Follow along with
-                    me as
-                    I expand my skills and tackle new topics.My education was in biology, but my current interest in data and technology. Follow along with
-                    me as
-                    I expand my skills and tackle new topics.My education was in biology, but my current interest in data and technology. Follow along with
-                    me as
-                    I expand my skills and tackle new topics. </p>
+                <p>Welcome to my website! Follow along as I explore topics in data science and technology. This blog
+                    will highlight my personal side projects as well as include informational posts about new topics.
+                    As I tackle new topics, my posts will demonstrate my learning process to serve as a studying
+                    tool for myself and hopefully for others that want to make the jump into learning about this field.
+                </p>
             </div>
         </div>
     </section>
