--- a/templates/topics.html
+++ b/templates/topics.html
@@ -18,67 +18,58 @@
         <img src="../static/img/mikayla.png" alt="logo">
     </div>
     <div class="nav_bar" id="my_nav_bar">
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <div class="fa fa-bars nav-bar-menu-icon"></div>
+        </a>
         <a class="nav_bar-link" href="index.html">Home</a>
         <a class="nav_bar-link" href="topics.html">Learning Topics</a>
         <a class="nav_bar-link" href="projects.html">Side Projects</a>
         <a class="nav_bar-link" href="about.html">About Me</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <div class="fa fa-bars nav-bar-menu-icon"></div>
-        </a>
     </div>
     <section class="learning_topics">
-        <div class="col span-1-of-4">
-            <div class="expectations">
-                <div class="expected_content">
-                    <h1>What to expect!</h1>
-                    <ul class="list_of_expectations">
-                        <li class="list_of_expectations-value">Blog-style approaches to learning objectives</li>
-                        <li class="list_of_expectations-value">Varying topics within data and technology</li>
-                        <li class="list_of_expectations-value">Series of posts following an in-depth topic</li>
-                        <li class="list_of_expectations-value">Notes with explanations and example code</li>
-                    </ul>
-                </div>
-                <div class="other_links">
-                    <h1>If you want to check out some of my beginning work, take a look at my <a class="github_link"
-                            href="https://github.com/MikaylaRobinson">Github!</a></h1>
-                    <h1>If you have something to say, feel free to reach out by email!</h1>
-                </div>
+            <div class="topics-divider"></div>
+
+        <div class="blog_post first_post">
+            <div class="blog_post_photo">
+                <img src="../static/img/kitkat.jpg" alt="Python Logo">
+            </div>
+            <div class="title_and_description">
+                <h1>The Making of this Website</h1>
+                <p>A basic walkthrough of how I went about making my first real website. Including the ups, the
+                    downs, my mistakes, and my growth. Beginning with HTML and CSS to come up with my orginial
+                    website design, that developed into the Python Flask app that you're experiencing now! If you
+                    are new to web development, take a look at the mistakes I made and save yourself some time and
+                    trouble!</p>
+                <a class="read-more-button" href="#story_page">Read More</a>
             </div>
         </div>
-        <div class="col span-3-of-4">
-            <div class="blog_post first_post">
-                <div class="blog_post_photo">
-                    <img src="../static/img/python_logo.jpg" alt="Python Logo">
-                </div>
-                <div class="title_and_description">
-                    <h1>Generic Python Title</h1>
-                    <p>A general summary of my learning article about python. This is where I try to capture someone's
-                        attention.</p>
-                </div>
+        <div class="topics-divider"></div>
+        <div class="blog_post second_post">
+            <div class="blog_post_photo">
+                <img src="../static/img/python_logo.jpg" alt="Python Logo">
             </div>
-            <div class="blog_post second_post">
-                <div class="blog_post_photo">
-                    <img src="../static/img/python_logo.jpg" alt="Python Logo">
-                </div>
-                <div class="title_and_description">
-                    <h1>Generic Python Title</h1>
-                    <p>A general summary of my learning article about python. This is where I try to capture
-                        someone's
-                        attention.</p>
-                </div>
-            </div>
-            <div class="blog_post third_post">
-                <div class="blog_post_photo">
-                    <img src="../static/img/python_logo.jpg" alt="Python Logo">
-                </div>
-                <div class="title_and_description">
-                    <h1>Generic Python Title</h1>
-                    <p>A general summary of my learning article about python. This is where I try to capture
-                        someone's
-                        attention.</p>
-                </div>
+            <div class="title_and_description">
+                <h1>Generic Python Title</h1>
+                <p>A general summary of my learning article about python. This is where I try to capture
+                    someone's
+                    attention.</p>
             </div>
         </div>
+        <div class="topics-divider"></div>
+
+        <div class="blog_post third_post">
+            <div class="blog_post_photo">
+                <img src="../static/img/python_logo.jpg" alt="Python Logo">
+            </div>
+            <div class="title_and_description">
+                <h1>Generic Python Title</h1>
+                <p>A general summary of my learning article about python. This is where I try to capture
+                    someone's
+                    attention.</p>
+            </div>
+        </div>
+        <div class="topics-divider"></div>
+
 
 
 
