--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,2 +1,286 @@
-.noselect,.nav_bar{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.flexbox-center,.about_me-text-container{display:-ms-flexbox;display:-webkit-flex;display:flex;-ms-flex-align:center;-webkit-align-items:center;-webkit-box-align:center;align-items:center}body{margin:0px;font-family:'Lato', sans-serif;color:#3d393a}h1{text-transform:uppercase}.header{font-weight:200;display:inline-block;position:absolute;padding-left:160px;padding-bottom:10px;display:inline-block;z-index:99}.header h1{text-align:center}.header img{border-radius:50px;height:50px;margin-top:40px}.block-section{width:90%;margin:40px auto}.nav_bar{text-align:right;padding:40px;padding-bottom:50px;overflow:hidden;z-index:100;position:relative}.nav_bar-link{color:#3d393a;text-decoration:none;padding-right:25px;padding-left:25px;padding-top:5px;margin:7px;font-size:20px;font-weight:500;text-transform:uppercase;display:inline-block}.nav_bar-link:hover{text-decoration:underline;text-underline-position:under}.nav-bar-menu-icon{color:black;padding-top:12px}.nav_bar .icon{display:none}.about_me{background:url("../img/new_photo_of_me.jpg");width:100%;height:800px;background-repeat:no-repeat;background-size:cover;padding:20px 0px, 0px, 0px;margin:0px}.about_me h1{font-family:'Open Sans', sans-serif;font-weight:300;font-size:5em;text-transform:uppercase;color:#fff}.about_me-text-box{font-family:'Open Sans', sans-serif;font-weight:100;line-height:1.6;width:40%;margin-left:auto;margin-right:5%;color:white}.about_me-text-container{height:100%}.text-container{position:absolute;right:0px;width:50%;text-align:center;padding:120px 100px 0px 0px}.photo_grid-container{height:100%;width:100%}.photo_grid-text-wrapper{height:100%;width:100%;color:white;line-height:1.7;transition:background-color 0.5s ease;background-color:none}.photo_grid-text{padding:1.5em;display:none;cursor:default}.photo_grid-container{width:100%;height:500px;background-size:cover;background-position:50% 50%}.photo_grid-container:hover .photo_grid-text-wrapper{background-color:rgba(0,0,0,0.72);display:block}.photo_grid-container:hover .photo_grid-text{display:inline-block}#photo_grid-container-1{background-image:url("../img/kitkat.jpg")}#photo_grid-container-2{background-image:url("../img/lillee.jpg")}#photo_grid-container-3{background-image:url("../img/graduation.jpg")}#photo_grid-container-4{background-image:url("../img/llama.jpg")}.learning_topics{margin:0 4em 0 4em}.blog_post{text-align:left;background-color:none;outline:2px solid black;height:300px;padding-top:10px;margin-bottom:2em}#third_post{float:right}.title_and_description{padding:2em}.blog_post_photo{float:left;padding-right:15px;padding-left:15px}.expectations{height:100%;margin:0px;padding-top:10px;background-color:none;outline:2px solid black}.expected_content{padding:0 4em;text-align:center}.list_of_expectations-value{line-height:1.6}.welcome{height:500px}.about_the_website{margin:0px auto;text-align:center;display:block;width:50%;font-size:1.3em;display:none}.featured_story{height:100%;text-align:left;background-color:none;outline:2px solid black;padding-top:10px;margin-bottom:2em}#photo_intro_container{background:url(../img/intro_photo.jpg);height:250px;width:250px;background-size:contain;background-repeat:no-repeat;border-radius:500px;border:2px #00000040 solid;display:block;margin:10px auto}.paragraph-divider{height:1px;width:3em;border-bottom:1px solid #00000040;display:block;margin:1em auto}@media screen and (max-width: 1275px){.nav_bar{padding:5px;text-align:center;position:fixed;display:block;width:100%;background:white;border-bottom:1px rgba(179,179,179,0.72) solid}.nav_bar a{display:none}.nav_bar a.icon{float:right;display:block;margin:0px auto;width:100%;padding-bottom:16px}.header img{display:none}.welcome{padding-top:65px}}@media screen and (max-width: 1275px){.nav_bar.responsive{position:relative}.nav_bar.responsive a{float:none;display:block}}@media screen and (max-width: 768px){.about_the_website{width:95%}#photo_intro_container{height:150px;width:150px}}
+.noselect, .nav_bar {
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
+     supported by Chrome and Opera */ }
+
+.flexbox-center, .about_me-text-container {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  align-items: center; }
+
+body {
+  margin: 0px;
+  font-family: 'Lato', sans-serif;
+  color: #3d393a; }
+
+h1 {
+  text-transform: uppercase; }
+
+.header {
+  font-weight: 200;
+  display: inline-block;
+  position: absolute;
+  padding-left: 160px;
+  padding-bottom: 10px;
+  display: inline-block;
+  z-index: 99; }
+
+.header h1 {
+  text-align: center; }
+
+.header img {
+  border-radius: 50px;
+  height: 50px;
+  margin-top: 40px; }
+
+.block-section {
+  width: 90%;
+  margin: 40px auto; }
+
+.nav_bar {
+  text-align: right;
+  padding: 40px;
+  padding-bottom: 50px;
+  overflow: hidden;
+  z-index: 100;
+  position: relative; }
+
+.nav_bar-link {
+  color: #3d393a;
+  text-decoration: none;
+  padding-right: 25px;
+  padding-left: 25px;
+  padding-top: 5px;
+  margin: 7px;
+  font-size: 20px;
+  font-weight: 500;
+  text-transform: uppercase;
+  display: inline-block; }
+  .nav_bar-link:hover {
+    text-decoration: underline;
+    text-underline-position: under; }
+
+.nav-bar-menu-icon {
+  color: black;
+  padding-top: 12px; }
+
+.nav_bar .icon {
+  display: none; }
+
+.about_me {
+  background: url("../img/new_photo_of_me.jpg");
+  width: 100%;
+  height: 800px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 20px 0px, 0px, 0px;
+  margin: 0px; }
+
+.about_me h1 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  font-size: 5em;
+  text-transform: uppercase;
+  color: white; }
+
+.about_me-text-box {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+  line-height: 1.6;
+  width: 40%;
+  margin-left: auto;
+  margin-right: 5%;
+  color: white; }
+
+.about_me-text-container {
+  height: 100%; }
+
+.text-container {
+  position: absolute;
+  right: 0px;
+  width: 50%;
+  text-align: center;
+  padding: 120px 100px 0px 0px; }
+
+.photo_grid-container {
+  height: 100%;
+  width: 100%; }
+
+.photo_grid-text-wrapper {
+  height: 100%;
+  width: 100%;
+  color: white;
+  line-height: 1.7;
+  transition: background-color 0.5s ease;
+  background-color: none; }
+
+.photo_grid-text {
+  padding: 1.5em;
+  display: none;
+  cursor: default; }
+
+.photo_grid-container {
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-position: 50% 50%; }
+  .photo_grid-container:hover .photo_grid-text-wrapper {
+    background-color: rgba(0, 0, 0, 0.72);
+    display: block; }
+  .photo_grid-container:hover .photo_grid-text {
+    display: inline-block; }
+
+#photo_grid-container-1 {
+  background-image: url("../img/kitkat.jpg"); }
+#photo_grid-container-2 {
+  background-image: url("../img/lillee.jpg"); }
+#photo_grid-container-3 {
+  background-image: url("../img/graduation.jpg"); }
+#photo_grid-container-4 {
+  background-image: url("../img/llama.jpg"); }
+
+.learning_topics {
+  margin: 0 4em 0 4em; }
+
+.blog_post {
+  text-align: left;
+  background-color: none;
+  height: 300px;
+  padding-top: 6px;
+  margin-bottom: 2em;
+  text-align: left;
+  width: 50%;
+  display: block;
+  margin: 1em auto;
+  line-height: 1.4em; }
+
+.topics-divider {
+  height: 1px;
+  width: 20em;
+  border-bottom: 1px solid #00000040;
+  display: block;
+  margin: 3em auto; }
+
+.title_and_description {
+  padding: 1em; }
+
+.blog_post_photo img {
+  height: 300px;
+  padding-right: 15px;
+  padding-left: 15px;
+  float: left;
+  border-radius: 100px; }
+
+.read-more-button {
+  text-decoration: none;
+  color: #3d393a;
+  float: right;
+  margin-right: 2em;
+  font-size: 1.2em;
+  padding: 8px;
+  border: 1px solid #00000040;
+  border-radius: 100px; }
+  .read-more-button:hover {
+    border: 2px solid black; }
+
+.welcome {
+  height: 500px; }
+
+.about_the_website {
+  margin: 0px auto;
+  text-align: center;
+  display: block;
+  width: 50%;
+  font-size: 1.3em;
+  display: none; }
+
+.featured_story {
+  height: 100%;
+  text-align: left;
+  background-color: none;
+  outline: 2px solid black;
+  padding-top: 10px;
+  margin-bottom: 2em; }
+
+#photo_intro_container {
+  background: url(../img/intro_photo.jpg);
+  height: 250px;
+  width: 250px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  border-radius: 500px;
+  border: 2px #00000040 solid;
+  display: block;
+  margin: 10px auto; }
+
+.paragraph-divider {
+  height: 1px;
+  width: 3em;
+  border-bottom: 1px solid #00000040;
+  display: block;
+  margin: 1em auto; }
+
+.home-about-me {
+  line-height: 1.3em; }
+
+/* When the screen is less than 600 pixels wide, hide all links, except 
+for the first one ("Home"). Show the link that contains should open and 
+close the topnav (.icon) */
+@media screen and (max-width: 1275px) {
+  .nav_bar {
+    padding: 5px;
+    text-align: center;
+    position: fixed;
+    display: block;
+    width: 100%;
+    background: white;
+    border-bottom: 1px rgba(179, 179, 179, 0.72) solid; }
+
+  .nav_bar a {
+    display: none; }
+
+  .nav_bar a.icon {
+    float: right;
+    display: block;
+    margin: 0px auto;
+    width: 100%;
+    padding-bottom: 16px; }
+
+  .header img {
+    display: none; }
+
+  .welcome {
+    padding-top: 65px; } }
+/* The "responsive" class is added to the topnav with JavaScript when the 
+user clicks on the icon. This class makes the topnav look good on small 
+screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 1275px) {
+  .nav_bar.responsive {
+    position: relative; }
+
+  .nav_bar.responsive a {
+    float: none;
+    display: block; } }
+@media screen and (max-width: 768px) {
+  .about_the_website {
+    width: 95%; }
+
+  #photo_intro_container {
+    height: 150px;
+    width: 150px; } }
+
 /*# sourceMappingURL=style.css.map */
