--- a/templates/about.html
+++ b/templates/about.html
@@ -34,6 +34,61 @@
         </div>
     </section>
     <section class="block-section personal_photo_grid">
+        <div class="photo_grid-col">
+            <div class="photo_grid-container" id="photo_grid-container-1">
+                <div class="photo_grid-text-wrapper">
+                    <div class="photo_grid-text noselect">
+                        I co-parent this sweet girl. After moving into our apartment, my partner found her crying,
+                        starving, and dirty on the street. After a trip to the vet and countless cans of cat food, she
+                        has turned into a happy and healthy cat. She now goes by KitKat and spends her days finding new
+                        places to nap around the house.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="photo_grid-col">
+            <div class="photo_grid-container" id="photo_grid-container-2">
+                <div class="photo_grid-text-wrapper">
+                    <div class="photo_grid-text noselect">
+                        My dog, Lillee, has been a dedicated best friend for many years. It was a tough decision, but
+                        she stayed back at my parents' house where she has a big yard, dogs to play with, and constant
+                        supervision.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="photo_grid-col">
+            <div class="photo_grid-container" id="photo_grid-container-3">
+                <div class="photo_grid-text-wrapper">
+                    <div class="photo_grid-text noselect">
+                        I am a December 2018 graduate of Ohio Wesleyan University. I graduated with a major in Zoology
+                        and a minor in Spanish. My major taught me major biological functions while applying the
+                        scientific method and practicing laboratory techniques. In undergraduate sciences, the focus is
+                        largely on data collection. After learning how to collect quality data, my interest is now
+                        learning the tools to analyze it!
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="photo_grid-col">
+            <div class="photo_grid-container" id="photo_grid-container-4">
+                <div class="photo_grid-text-wrapper">
+                    <div class="photo_grid-text noselect">
+                        Originally from Ohio, I grew up in a rural, farming community. Most people do not know, but
+                        llamas can be useful as guard animals due to their pack instinct and intimidating size.
+                        This is Letigo, and he acts as the guard for his "pack" of goats and chickens. He is still
+                        in Ohio warding off the occasional coyote,fox, or raccoon.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</body>
+
+</html>
+
+<!--
+    <section class="block-section personal_photo_grid">
         <div class="col span-1-of-4">
             <div class="photo_grid-container" id="photo_grid-container-1">
                 <div class="photo_grid-text-wrapper">
@@ -83,6 +138,6 @@
             </div>
         </div>
     </section>
-</body>
 
-</html>
+
+-->
