--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -54,6 +54,8 @@ h1 {
     border-radius: 50px;
     height: 50px;
     margin-top: $nav-bar-top-spacing;
+    position: relative;
+    z-index: 101;
 }
 
 .block-section {
@@ -156,8 +158,9 @@ h1 {
 
 .photo_grid-text {
     padding: 1.5em;
-    display: none;
+    opacity: 0;
     cursor: default;
+    transition: .5s ease opacity;
 }
 
 .photo_grid-container {
@@ -168,10 +171,11 @@ h1 {
     &:hover {
         .photo_grid-text-wrapper {
             background-color: $outline-color;
-            display: block;
+            display: grid;
         }
         .photo_grid-text {
-            display: inline-block;
+            display: inherit; 
+            opacity: 1;
         }
 
     }
@@ -193,6 +197,15 @@ h1 {
         }
     }
 
+.photo_grid-col {
+    //grid-auto-flow: column;
+}
+
+.personal_photo_grid {
+    display: grid;
+    grid-auto-flow: column;
+}
+
 
 //LEARNING TOPICS PAGE//
 .learning_topics {
@@ -209,9 +222,18 @@ h1 {
     display: block;
     margin: 1em auto;
     line-height: 1.4em;
+    height: auto;
     //border-left: 1px solid #00000040;
     //border-radius: 100px;
 
+}
+
+#first_post {
+    height: 200px;
+}
+
+.blog_post .col {
+    display: block;
 }
 
 .topics-divider {
