--- a/templates/topics.html
+++ b/templates/topics.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="header">
-        <img src="../static/img/mikayla.png" alt="logo">
+        <a class="logo-link" href="index.html"><img src="../static/img/mikayla.png" alt="logo"></a>
     </div>
     <div class="nav_bar" id="my_nav_bar">
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -28,21 +28,26 @@
         <a class="nav_bar-link" href="about.html">About Me</a>
     </div>
     <section class="learning_topics">
-            <div class="topics-divider"></div>
+        <div class="topics-divider"></div>
 
-        <div class="blog_post first_post">
-            <div class="blog_post_photo">
-                <img src="../static/img/kitkat.jpg" alt="Python Logo">
+        <div class="blog_post" id="first_post">
+            <div class="col span-1-of-3">
+                <div class="blog_post_photo">
+                    <img src="../static/img/kitkat.jpg" alt="Python Logo">
+                </div>
             </div>
-            <div class="title_and_description">
-                <h1>The Making of this Website</h1>
-                <p>A basic walkthrough of how I went about making my first real website. Including the ups, the
-                    downs, my mistakes, and my growth. Beginning with HTML and CSS to come up with my orginial
-                    website design, that developed into the Python Flask app that you're experiencing now! If you
-                    are new to web development, take a look at the mistakes I made and save yourself some time and
-                    trouble!</p>
-                <a class="read-more-button" href="#story_page">Read More</a>
+            <div class="col span-2-of-3">
+                <div class="title_and_description">
+                    <h1>The Making of this Website</h1>
+                    <p>A basic walkthrough of how I went about making my first real website. Including the ups, the
+                        downs, my mistakes, and my growth. Beginning with HTML and CSS to come up with my orginial
+                        website design, that developed into the Python Flask app that you're experiencing now! If you
+                        are new to web development, take a look at the mistakes I made and save yourself some time and
+                        trouble!</p>
+                    <a class="read-more-button" href="#story_page">Read More</a>
+                </div>
             </div>
+
         </div>
         <div class="topics-divider"></div>
         <div class="blog_post second_post">
