--- a/templates/projects.html
+++ b/templates/projects.html
@@ -26,8 +26,8 @@
             <div class="fa fa-bars nav-bar-menu-icon"></div>
         </a>
     </div>
-    <section class="row_of_projects">
-        <div class="col span-1-of-4">
+    <section class="columns_of_projects">
+        <div class="project-col">
             <div class="project_post first_post">
                 <div class="project_post_photo">
                     <img src="../static/img/python_logo.jpg" alt="Python Logo">
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="col span-1-of-4">
+        <div class="project-col">
             <div class="project_post second_post">
                 <div class="project_post_photo">
                     <img src="../static/img/python_logo.jpg" alt="Python Logo">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div class="col span-1-of-4">
+        <div class="project-col">
             <div class="project_post third_post">
                 <div class="project_post_photo">
                     <img src="../static/img/python_logo.jpg" alt="Python Logo">
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </div>
-        <div class="col span-1-of-4">
+        <div class="project-col">
             <div class="project_post fourth_post">
                 <div class="project_post_photo">
                     <img src="../static/img/python_logo.jpg" alt="Python Logo">
