--- a/templates/topics.html
+++ b/templates/topics.html
@@ -31,12 +31,12 @@
         <div class="topics-divider"></div>
 
         <div class="blog_post" id="first_post">
-            <div class="col span-1-of-3">
+            <div class="post-col">
                 <div class="blog_post_photo">
                     <img src="../static/img/kitkat.jpg" alt="Python Logo">
                 </div>
             </div>
-            <div class="col span-2-of-3">
+            <div class="post-col">
                 <div class="title_and_description">
                     <h1>The Making of this Website</h1>
                     <p>A basic walkthrough of how I went about making my first real website. Including the ups, the
@@ -50,30 +50,46 @@
 
         </div>
         <div class="topics-divider"></div>
-        <div class="blog_post second_post">
-            <div class="blog_post_photo">
-                <img src="../static/img/python_logo.jpg" alt="Python Logo">
+        <div class="blog_post" id="first_post">
+                <div class="post-col">
+                    <div class="blog_post_photo">
+                        <img src="../static/img/kitkat.jpg" alt="Python Logo">
+                    </div>
+                </div>
+                <div class="post-col">
+                    <div class="title_and_description">
+                        <h1>The Making of this Website</h1>
+                        <p>A basic walkthrough of how I went about making my first real website. Including the ups, the
+                            downs, my mistakes, and my growth. Beginning with HTML and CSS to come up with my orginial
+                            website design, that developed into the Python Flask app that you're experiencing now! If you
+                            are new to web development, take a look at the mistakes I made and save yourself some time and
+                            trouble!</p>
+                        <a class="read-more-button" href="#story_page">Read More</a>
+                    </div>
+                </div>
+    
             </div>
-            <div class="title_and_description">
-                <h1>Generic Python Title</h1>
-                <p>A general summary of my learning article about python. This is where I try to capture
-                    someone's
-                    attention.</p>
-            </div>
-        </div>
         <div class="topics-divider"></div>
 
-        <div class="blog_post third_post">
-            <div class="blog_post_photo">
-                <img src="../static/img/python_logo.jpg" alt="Python Logo">
+        <div class="blog_post" id="first_post">
+                <div class="post-col">
+                    <div class="blog_post_photo">
+                        <img src="../static/img/kitkat.jpg" alt="Python Logo">
+                    </div>
+                </div>
+                <div class="post-col">
+                    <div class="title_and_description">
+                        <h1>The Making of this Website</h1>
+                        <p>A basic walkthrough of how I went about making my first real website. Including the ups, the
+                            downs, my mistakes, and my growth. Beginning with HTML and CSS to come up with my orginial
+                            website design, that developed into the Python Flask app that you're experiencing now! If you
+                            are new to web development, take a look at the mistakes I made and save yourself some time and
+                            trouble!</p>
+                        <a class="read-more-button" href="#story_page">Read More</a>
+                    </div>
+                </div>
+    
             </div>
-            <div class="title_and_description">
-                <h1>Generic Python Title</h1>
-                <p>A general summary of my learning article about python. This is where I try to capture
-                    someone's
-                    attention.</p>
-            </div>
-        </div>
         <div class="topics-divider"></div>
 
 
