--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,15 +170,12 @@ h1 {
   padding-top: 6px;
   margin-bottom: 2em;
   text-align: left;
-  width: 50%;
+  width: 60%;
   display: grid;
   grid-template-columns: 1fr 2fr;
   margin: 1em auto;
   line-height: 1.4em;
   height: auto; }
-
-#first_post {
-  height: 200px; }
 
 .blog_post .col {
   display: block; }
@@ -189,16 +186,14 @@ h1 {
   border-bottom: 1px solid #00000040;
   display: block;
   margin: 1em auto;
-  padding: 1em 0em 3em 0em; }
+  padding: 1em 0em 1em 0em; }
 
 .title_and_description {
-  padding: 1em; }
+  padding: 1em;
+  padding-bottom: 0; }
 
 .blog_post_photo img {
   height: 200px;
-  padding-right: 15px;
-  padding-left: 15px;
-  float: left;
   border-radius: 100px;
   margin-top: 20px; }
 
@@ -258,6 +253,13 @@ h1 {
   display: grid;
   grid-auto-flow: column; }
 
+footer {
+  text-align: center;
+  padding-bottom: 2em; }
+
+.fab {
+  padding: 0px 5px; }
+
 /* When the screen is less than 600 pixels wide, hide all links, except 
 for the first one ("Home"). Show the link that contains should open and 
 close the topnav (.icon) */
@@ -286,23 +288,56 @@ close the topnav (.icon) */
     display: none; }
 
   .welcome {
-    padding-top: 65px; } }
-/* The "responsive" class is added to the topnav with JavaScript when the 
-user clicks on the icon. This class makes the topnav look good on small 
-screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 1275px) {
-  .nav_bar.responsive {
-    position: relative; }
+    padding-top: 65px; }
 
-  .nav_bar.responsive a {
-    float: none;
-    display: block; } }
-@media screen and (max-width: 768px) {
   .about_the_website {
     width: 95%; }
 
   #photo_intro_container {
     height: 150px;
-    width: 150px; } }
+    width: 150px; }
+
+  .nav_bar.responsive {
+    position: relative; }
+
+  .nav_bar.responsive a {
+    float: none;
+    display: block; }
+
+  .blog_post {
+    width: 95%; }
+
+  .blog_post h1 {
+    text-align: center;
+    line-height: 1.3em; }
+
+  .blog_post_photo {
+    text-align: center; }
+
+  .blog_post p {
+    text-align: justify;
+    line-height: 1.2em; }
+
+  .topics-divider:first-of-type {
+    opacity: 0; } }
+@media screen and (max-width: 768px) {
+  .blog_post {
+    display: block; } }
+@media screen and (max-width: 450px) {
+  .blog_post_photo img {
+    width: 100%;
+    height: initial;
+    border-radius: 100px;
+    margin-top: 20px; }
+
+  .blog_post {
+    width: 100%; }
+
+  .title_and_description {
+    padding: 0;
+    padding-top: 1em; }
+
+  .learning_topics {
+    margin: 0 1em; } }
 
 /*# sourceMappingURL=style.css.map */
