--- a/static/css/main.css
+++ b/static/css/main.css
@@ -170,15 +170,12 @@ h1 {
   padding-top: 6px;
   margin-bottom: 2em;
   text-align: left;
-  width: 50%;
+  width: 60%;
   display: grid;
   grid-template-columns: 1fr 2fr;
   margin: 1em auto;
   line-height: 1.4em;
   height: auto; }
-
-#first_post {
-  height: 200px; }
 
 .blog_post .col {
   display: block; }
@@ -189,16 +186,14 @@ h1 {
   border-bottom: 1px solid #00000040;
   display: block;
   margin: 1em auto;
-  padding: 1em 0em 3em 0em; }
+  padding: 1em 0em 1em 0em; }
 
 .title_and_description {
-  padding: 1em; }
+  padding: 1em;
+  padding-bottom: 0; }
 
 .blog_post_photo img {
   height: 200px;
-  padding-right: 15px;
-  padding-left: 15px;
-  float: left;
   border-radius: 100px;
   margin-top: 20px; }
 
@@ -257,5 +252,12 @@ h1 {
 .columns_of_projects {
   display: grid;
   grid-auto-flow: column; }
+
+footer {
+  text-align: center;
+  padding-bottom: 2em; }
+
+.fab {
+  padding: 0px 5px; }
 
 /*# sourceMappingURL=main.css.map */
