--- a/static/css/media.scss
+++ b/static/css/media.scss
@@ -1,9 +1,9 @@
 @import "color";
 
 // Responsive variables // 
-$tablet-width: 768px;
-$desktop-width: 1024px;
 $navbar-break: 1275px;
+$tablet-width: 768px;
+$phone-width: 450px;
 
 /* When the screen is less than 600 pixels wide, hide all links, except 
 for the first one ("Home"). Show the link that contains should open and 
@@ -35,28 +35,72 @@ close the topnav (.icon) */
   .welcome {
     padding-top: 65px;
   }
-}
 
-
-/* The "responsive" class is added to the topnav with JavaScript when the 
-user clicks on the icon. This class makes the topnav look good on small 
-screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: $navbar-break) {
-	.nav_bar.responsive {
-		position: relative;
-	}
-	.nav_bar.responsive a {
-		float: none;
-		display: block;
-	}
-}
-
-@media screen and (max-width: $tablet-width) {
   .about_the_website {
     width: 95%;
   }
   #photo_intro_container {
     height: 150px;
     width: 150px;
+  }
+
+  .nav_bar.responsive {
+		position: relative;
+	}
+	.nav_bar.responsive a {
+		float: none;
+		display: block;
+  }
+  
+  .blog_post {
+    width: 95%;
+  }
+
+  .blog_post h1 {
+    text-align: center;
+    line-height: 1.3em;
+  }
+
+  .blog_post_photo {
+    text-align: center;
+  }
+
+
+  .blog_post p {
+    text-align: justify;
+    line-height: 1.2em;
+  }
+
+  .topics-divider:first-of-type {
+    opacity: 0;
+  }
+
+}
+
+@media screen and (max-width: $tablet-width) {
+  .blog_post {
+    display: block;
+  }
+}
+
+@media screen and (max-width: $phone-width) {
+  .blog_post_photo img{
+    width: 100%;
+    height: initial;
+    border-radius: 100px;
+    margin-top: 20px
+  }
+
+  .blog_post {
+    width: 100%;
+  }
+
+  .title_and_description {
+    padding: 0;
+    padding-top: 1em;
+  }
+
+  .learning_topics {
+    margin: 0 1em;
   }
 }
