--- a/FlaskApp/static/css/main.css
+++ b/FlaskApp/static/css/main.css
@@ -212,13 +212,12 @@ h1 {
 .welcome {
   height: 500px; }
 
-.about_the_website {
+.welcome {
   margin: 0px auto;
   text-align: center;
   display: block;
   width: 50%;
-  font-size: 1.3em;
-  display: none; }
+  font-size: 1.3em; }
 
 .featured_story {
   height: 100%;
@@ -251,93 +250,34 @@ h1 {
 
 .columns_of_projects {
   display: grid;
-  grid-auto-flow: column; }
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: 40px auto;
+  width: 90%; }
+
+.project-col:not(:last-child) {
+  border-right: 1px solid #00000040; }
+
+.project_post_photo img {
+  height: 200px;
+  border-radius: 100px;
+  margin-top: 20px; }
 
 footer {
   text-align: center;
-  padding-bottom: 2em; }
+  padding-bottom: 1em;
+  height: 100px;
+  margin-top: auto;
+  bottom: 0;
+  width: 100%;
+  display: block; }
 
 .fab {
   padding: 0px 5px; }
 
-/* When the screen is less than 600 pixels wide, hide all links, except 
-for the first one ("Home"). Show the link that contains should open and 
-close the topnav (.icon) */
-@media screen and (max-width: 1275px) {
-  .nav_bar {
-    padding: 5px;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    display: block;
-    width: 100%;
-    background: white;
-    border-bottom: 1px rgba(179, 179, 179, 0.72) solid; }
+.fa-github-square {
+  color: black; }
 
-  .nav_bar a {
-    display: none; }
+.fa-linkedin {
+  color: #0077b5; }
 
-  .nav_bar a.icon {
-    float: right;
-    display: block;
-    margin: 0px auto;
-    width: 100%;
-    padding-bottom: 16px; }
-
-  .header img {
-    display: none; }
-
-  .welcome {
-    padding-top: 65px; }
-
-  .about_the_website {
-    width: 95%; }
-
-  #photo_intro_container {
-    height: 150px;
-    width: 150px; }
-
-  .nav_bar.responsive {
-    position: relative; }
-
-  .nav_bar.responsive a {
-    float: none;
-    display: block; }
-
-  .blog_post {
-    width: 95%; }
-
-  .blog_post h1 {
-    text-align: center;
-    line-height: 1.3em; }
-
-  .blog_post_photo {
-    text-align: center; }
-
-  .blog_post p {
-    text-align: justify;
-    line-height: 1.2em; }
-
-  .topics-divider:first-of-type {
-    opacity: 0; } }
-@media screen and (max-width: 768px) {
-  .blog_post {
-    display: block; } }
-@media screen and (max-width: 450px) {
-  .blog_post_photo img {
-    width: 100%;
-    height: initial;
-    border-radius: 100px;
-    margin-top: 20px; }
-
-  .blog_post {
-    width: 100%; }
-
-  .title_and_description {
-    padding: 0;
-    padding-top: 1em; }
-
-  .learning_topics {
-    margin: 0 1em; } }
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=main.css.map */
