--- a/FlaskApp/static/css/main.scss
+++ b/FlaskApp/static/css/main.scss
@@ -271,13 +271,12 @@ h1 {
     height: 500px;;
 }
 
-.about_the_website {
+.welcome {
     margin: 0px auto;
     text-align: center;
     display: block;
     width: 50%;
     font-size: 1.3em;
-    display: none;
 }
 
 .featured_story {
@@ -315,16 +314,50 @@ h1 {
 // Side Projects Page
 .columns_of_projects {
     display: grid;
-    grid-auto-flow: column;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 40px auto;
+    width: 90%;
+
 }
+
+.project-col:not(:last-child) {
+    border-right: 1px solid #00000040;
+
+}
+
+
+
+.project_post_photo img{
+    height: 200px;
+    border-radius: 100px;
+    margin-top: 20px
+}
+
+
+
+
 
 //Footer
 footer {
     text-align: center;
-    padding-bottom: 2em;
+    padding-bottom: 1em;
+    height: 100px;
+    margin-top: auto;
+    bottom: 0;
+    width: 100%;
+    display: block;
 }
 
 .fab {
     padding: 0px 5px;
+
+}
+
+.fa-github-square {
+    color: black;
+}
+
+.fa-linkedin {
+    color: #0077b5;
 }
 
