--- a/FlaskApp/templates/about.html
+++ b/FlaskApp/templates/about.html
@@ -1,3 +1,72 @@
+{% extends 'base.html' %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+<section class="about_me">
+    <div class="about_me-text-container">
+        <div class="about_me-text-box"> Hello stranger. Please look at me on this train platform. <br><br> I
+            LOOOOVE train platforms! Look how happy I am!</div>
+    </div>
+</section>
+<section class="block-section personal_photo_grid">
+    <div class="photo_grid-col">
+        <div class="photo_grid-container" id="photo_grid-container-1">
+            <div class="photo_grid-text-wrapper">
+                <div class="photo_grid-text noselect">
+                    I co-parent this sweet girl. After moving into our apartment, my partner found her crying,
+                    starving, and dirty on the street. After a trip to the vet and countless cans of cat food, she
+                    has turned into a happy and healthy cat. She now goes by KitKat and spends her days finding new
+                    places to nap around the house.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="photo_grid-col">
+        <div class="photo_grid-container" id="photo_grid-container-2">
+            <div class="photo_grid-text-wrapper">
+                <div class="photo_grid-text noselect">
+                    My dog, Lillee, has been a dedicated best friend for many years. It was a tough decision, but
+                    she stayed back at my parents' house where she has a big yard, dogs to play with, and constant
+                    supervision.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="photo_grid-col">
+        <div class="photo_grid-container" id="photo_grid-container-3">
+            <div class="photo_grid-text-wrapper">
+                <div class="photo_grid-text noselect">
+                    I am a December 2018 graduate of Ohio Wesleyan University. I graduated with a major in Zoology
+                    and a minor in Spanish. My major taught me major biological functions while applying the
+                    scientific method and practicing laboratory techniques. In undergraduate sciences, the focus is
+                    largely on data collection. After learning how to collect quality data, my interest is now
+                    learning the tools to analyze it!
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="photo_grid-col">
+        <div class="photo_grid-container" id="photo_grid-container-4">
+            <div class="photo_grid-text-wrapper">
+                <div class="photo_grid-text noselect">
+                    Originally from Ohio, I grew up in a rural, farming community. Most people do not know, but
+                    llamas can be useful as guard animals due to their pack instinct and intimidating size.
+                    This is Letigo, and he acts as the guard for his "pack" of goats and chickens. He is still
+                    in Ohio warding off the occasional coyote,fox, or raccoon.
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+{% endblock %}
+
+
+
+
+
+
+<!------
 <!DOCTYPE html>
 <html>
 
@@ -12,6 +81,8 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK|Open+Sans|Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dosis:300|Lato:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+        crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -23,14 +94,15 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <div class="fa fa-bars nav-bar-menu-icon"></div>
         </a>
-        <a class="nav_bar-link" href="index.html">Home</a>
-        <a class="nav_bar-link" href="topics.html">Learning Topics</a>
-        <a class="nav_bar-link" href="projects.html">Side Projects</a>
-        <a class="nav_bar-link" href="about.html">About Me</a>
+        <a class="nav_bar-link" href="/">Home</a>
+        <a class="nav_bar-link" href="/learning_topics">Learning Topics</a>
+        <a class="nav_bar-link" href="/side_projects">Side Projects</a>
+        <a class="nav_bar-link" href="/about_me">About Me</a>
     </div>
     <section class="about_me">
         <div class="about_me-text-container">
-            <div class="about_me-text-box"> Hello stranger. Please look at me on this train platform. <br><br> I LOOOOVE train platforms! Look how happy I am!</div>
+            <div class="about_me-text-box"> Hello stranger. Please look at me on this train platform. <br><br> I
+                LOOOOVE train platforms! Look how happy I am!</div>
         </div>
     </section>
     <section class="block-section personal_photo_grid">
@@ -83,61 +155,22 @@
             </div>
         </div>
     </section>
+    <section class="footer">
+        <footer>
+            <div class="icon-links">
+                <a class="contact-link" href="https://github.com/MikaylaRobinson" target="_blank">
+                    <i class="fab fa-github-square fa-2x"></i>
+                </a>
+                <a class="contact-link" href="https://www.linkedin.com/in/mikaylamrobinson/">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
+            </div>
+        </footer>
+
+    </section>
+
 </body>
 
 </html>
-
-<!--
-    <section class="block-section personal_photo_grid">
-        <div class="col span-1-of-4">
-            <div class="photo_grid-container" id="photo_grid-container-1">
-                <div class="photo_grid-text-wrapper">
-                    <div class="photo_grid-text noselect">
-                        I co-parent this sweet girl. After moving into our apartment, my partner found her crying,
-                        starving, and dirty on the street. After a trip to the vet and countless cans of cat food, she
-                        has turned into a happy and healthy cat. She now goes by KitKat and spends her days finding new
-                        places to nap around the house.
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col span-1-of-4">
-            <div class="photo_grid-container" id="photo_grid-container-2">
-                <div class="photo_grid-text-wrapper">
-                    <div class="photo_grid-text noselect">
-                        My dog, Lillee, has been a dedicated best friend for many years. It was a tough decision, but
-                        she stayed back at my parents' house where she has a big yard, dogs to play with, and constant
-                        supervision.
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col span-1-of-4">
-            <div class="photo_grid-container" id="photo_grid-container-3">
-                <div class="photo_grid-text-wrapper">
-                    <div class="photo_grid-text noselect">
-                        I am a December 2018 graduate of Ohio Wesleyan University. I graduated with a major in Zoology
-                        and a minor in Spanish. My major taught me major biological functions while applying the
-                        scientific method and practicing laboratory techniques. In undergraduate sciences, the focus is
-                        largely on data collection. After learning how to collect quality data, my interest is now
-                        learning the tools to analyze it!
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col span-1-of-4">
-            <div class="photo_grid-container" id="photo_grid-container-4">
-                <div class="photo_grid-text-wrapper">
-                    <div class="photo_grid-text noselect">
-                        Originally from Ohio, I grew up in a rural, farming community. Most people do not know, but
-                        llamas can be useful as guard animals due to their pack instinct and intimidating size.
-                        This is Letigo, and he acts as the guard for his "pack" of goats and chickens. He is still
-                        in Ohio warding off the occasional coyote,fox, or raccoon.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
 -->
